fixed qa slider width, fixed navbar li alignment

--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ body {
 }
 
 .nav-scroll {
-    color: rgb(169,169,169);
+    color: goldenrod;
     display: inline-block;
     font-size: 1rem;
     height: 2rem;
@@ -84,32 +84,6 @@ body {
 .nav-scroll:hover {
     color: 	rgb(56,56,56);
 }
-
-/* .resume {
-    border: 0.1rem solid rgb(169,169,169);
-    height: 2rem;
-    margin-left: 1rem;
-    position: relative;
-    width: 6rem;;
-}
-
-.resume a {
-    color: rgb(169,169,169);
-    display: inline-block;
-    font-size: 1rem;
-    height: 1.9rem;
-    left: 0;
-    position: absolute;
-    text-decoration: none;
-    top: 0;
-    vertical-align: middle;
-    width: 5.9rem;
-}
-
-.resume:hover {
-    background-color: goldenrod;
-    color: 	rgb(56,56,56);
-} */
 
 .typing {
     align-items: center;
@@ -317,7 +291,7 @@ body {
     font-family: 'Circular', Helvetica, sans-serif;
     height: 29rem;
     overflow: hidden;
-    width: 900px;
+    width: 896px;
 }
 
 .slider i {
@@ -385,7 +359,6 @@ body {
 }
 
 .flashcards, .notflix {
-    background-color: #fff;
     height: 20rem;
     overflow: hidden;
     position: relative;
@@ -412,7 +385,7 @@ body {
     background:
         -webkit-radial-gradient(
             rgba(255,255,255, 0.6),
-            rgba(244,246,248,1)
+            rgb(255, 255, 255)
     );
 }
 
@@ -446,7 +419,7 @@ body {
     align-items: center;
     display: flex;
     flex-direction: column;
-    height: 20rem;
+    height: 25rem;
     justify-content: center;
     left: 0;
     margin: 0;
@@ -503,7 +476,6 @@ body {
 }
 
 .bank {
-    background-color: #fff;
     height: 25rem;
     overflow: hidden;
     position: relative;
